[package]
name = "extractors"
version = "0.1.0"
edition = "2021"
description = "A simple, lightweight library for extracting function call parameters from a provider."
license = "MIT"
repository = "https://github.com/mrvillage/extractors"
documentation = "https://docs.rs/extractors"
readme = "README.md"


[dependencies]
